# v1/doc/swagger.yaml
@@ -325,6 +325,29 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+  /Product/Category/{id}:
+    parameters:
+      - name: id
+        in: path
+        type: string
+        required: true
+        description: Unique customer identifier to be used for experience customization.
+    get:
+      summary: Get Product by Category id
+      description: Return a list of Product by Category id.
+      tags:
+        - Products
+      responses:
+        '200':
+          description: An array of Products found
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/Product'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
   /Category:
     parameters:
         - name: access_token
